RESOLVED FIXED51525
[GTK] media/audio-data-url.html fails since r75504
https://bugs.webkit.org/show_bug.cgi?id=51525
Summary [GTK] media/audio-data-url.html fails since r75504
Philippe Normand
Reported 2010-12-23 01:25:38 PST
Seems like the media is not loaded at all now, the test times out.
Attachments
proposed patch (2.24 KB, patch)
2010-12-23 02:41 PST, Philippe Normand
xan.lopez: review+
Philippe Normand
Comment 1 2010-12-23 02:41:19 PST
Created attachment 77318 [details] proposed patch
Xan Lopez
Comment 2 2010-12-23 05:03:15 PST
Comment on attachment 77318 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=77318&action=review r=me > WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:1335 > handledApplicationSubtypes.add(String("vnd.rn-realmedia")); I'm not sure about whether removing this makes sense or not. Think it through and commit what you see fit ;)
Philippe Normand
Comment 3 2010-12-23 05:15:53 PST
WebKit Review Bot
Comment 4 2010-12-23 06:01:36 PST
http://trac.webkit.org/changeset/74551 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.