2010-12-23  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        [GTK] media/audio-data-url.html fails since r75504
        https://bugs.webkit.org/show_bug.cgi?id=51525

        Make the GStreamer media-player advertize 3gpp mime-types as
        supported if the 3gp caps are in the typefind factories.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache):

Canonical link: https://commits.webkit.org/64890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74551 268f45cc-cd09-0410-ab3c-d52691b4dbfc